initial debug